--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtilities is used to manipulate to manipulate your text in the way you want"
+      content="TextUtilities is a word counter and a character counting utility which can be used  to manipulate your text in the way you want."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <title>Text Utilities</title>
+    <title>Text Utilities - Word Counter | Character Counter | LowerCase to UpperCase | UpperCase to LowerCase </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
